ajuste nas rotas do docker
